// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with badge should render badge inside link 1`] = `
<span
  className="menu__link"
  onClick={[Function]}
  role="presentation"
>
  test
  <span
    className="badge badge--brand menu__link__badge"
  >
    yep
  </span>
</span>
`;

exports[`Link with modifiers with active and child truthy 1`] = `
<span
  className="menu__link menu__link--child menu__link--active"
  onClick={[Function]}
  role="presentation"
>
  test
</span>
`;

exports[`Link with modifiers with active truthy 1`] = `
<span
  className="menu__link menu__link--active"
  onClick={[Function]}
  role="presentation"
>
  test
</span>
`;

exports[`Link with modifiers with child truthy 1`] = `
<span
  className="menu__link menu__link--child"
  onClick={[Function]}
  role="presentation"
>
  test
</span>
`;

exports[`Link with url should render link with href 1`] = `
<a
  className="menu__link"
  href="/test"
  onClick={[Function]}
  target="_self"
>
  link with href
</a>
`;

exports[`Link with url should render link with target 1`] = `
<a
  className="menu__link"
  href="/test"
  onClick={[Function]}
  target="_blank"
>
  link
</a>
`;

exports[`Link without onClick prop should render link properly 1`] = `
<span
  className="menu__link"
  onClick={[Function]}
  role="presentation"
>
  my link
</span>
`;

exports[`Link without url should render link properly 1`] = `
<span
  className="menu__link"
  onClick={[Function]}
  role="presentation"
>
  my link
</span>
`;

exports[`Link without url should render link properly with title instead of children 1`] = `
<span
  className="menu__link"
  onClick={[Function]}
  role="presentation"
>
  my link
</span>
`;
